// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _accessKey="V" 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              V
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" name="field-color" type="color" value="#FFFFFF">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _alert=true 1`] = `
<kol-input-color _alert="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" name="field-color" type="color" value="#FFFFFF">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _disabled=true 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--disabled kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--disabled">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--disabled kol-input-color__input kol-input-color__input--color" disabled="" id="input-color-nonce" name="field-color" type="color" value="#FFFFFF">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _hideLabel=true 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--hide-label kol-input-color">
      <label class="kol-form-field__label" hidden="" htmlfor="input-color-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-label="Label" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" name="field-color" type="color" value="#FFFFFF">
          </div>
        </div>
        <div class="kol-form-field__tooltip">
          <div class="kol-tooltip__floating">
            <div class="kol-tooltip__arrow"></div>
            <span class="kol-span kol-tooltip__content" id="input-color-label-nonce">
              <span class="kol-span__container">
                <span class="kol-span__label">
                  Label
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _hint="Hint" 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-describedby="input-color-hint-nonce" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" name="field-color" type="color" value="#FFFFFF">
          </div>
        </div>
      </div>
      <span class="kol-form-field__hint" id="input-color-hint-nonce">
        Hint
      </span>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" name="field-color" type="color" value="#FFFFFF">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" name="field-color" type="color" value="#FFFFFF">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end"></div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" name="field-color" type="color" value="#FFFFFF">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _infoPopover={"_label":"Info","_content":"Ich bin ein Hinweis.","_icons":"kolicon-alert-info"} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
        <kol-popover-button-wc _content="Ich bin ein Hinweis." _hidelabel="" _icons="kolicon-alert-info" _inline="" _label="Info" _variant="ghost">
          <div class="kol-popover-button__popover--styled">
            Ich bin ein Hinweis.
          </div>
        </kol-popover-button-wc>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" name="field-color" type="color" value="#FFFFFF">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true _touched=true 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _touched="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--error kol-form-field--hidden-msg kol-form-field--msg-type-error kol-form-field--touched kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input aria-invalid="true" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched kol-input-color__input kol-input-color__input--color" id="input-color-nonce" name="field-color" type="color" value="#FFFFFF">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _touched=true 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _touched="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--error kol-form-field--msg-type-error kol-form-field--touched kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input aria-describedby="input-color-msg-nonce" aria-invalid="true" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched kol-input-color__input kol-input-color__input--color" id="input-color-nonce" name="field-color" type="color" value="#FFFFFF">
          </div>
        </div>
      </div>
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg kol-form-field__msg" id="input-color-msg-nonce" role="alert">
        <span class="visually-hidden">
          kol-error
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
        <div class="kol-alert__content">
          Es ist ein Fehler aufgetreten
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-describedby="input-color-msg-nonce" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" name="field-color" type="color" value="#FFFFFF">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _readOnly=true 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _readonly="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" name="field-color" type="color" value="#FFFFFF">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _shortKey="S" 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              S
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-keyshortcuts="S" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" name="field-color" type="color" value="#FFFFFF">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" name="field-color" type="color" value="#FFFFFF">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-button-wc _hidelabel="" _label="einblenden" class="kol-input-container__smart-button"></kol-button-wc>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _suggestions=["#FF0000","#00FF00","#0000FF"] _accessKey="V" 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              V
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" list="input-color-list-nonce" name="field-color" type="color" value="#FFFFFF">
            <datalist id="input-color-list-nonce">
              <option value="#FF0000"></option>
              <option value="#00FF00"></option>
              <option value="#0000FF"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _suggestions=["#FF0000","#00FF00","#0000FF"] _alert=true 1`] = `
<kol-input-color _alert="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" list="input-color-list-nonce" name="field-color" type="color" value="#FFFFFF">
            <datalist id="input-color-list-nonce">
              <option value="#FF0000"></option>
              <option value="#00FF00"></option>
              <option value="#0000FF"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _suggestions=["#FF0000","#00FF00","#0000FF"] _disabled=true 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--disabled kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--disabled">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--disabled kol-input-color__input kol-input-color__input--color" disabled="" id="input-color-nonce" list="input-color-list-nonce" name="field-color" type="color" value="#FFFFFF">
            <datalist id="input-color-list-nonce">
              <option value="#FF0000"></option>
              <option value="#00FF00"></option>
              <option value="#0000FF"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _suggestions=["#FF0000","#00FF00","#0000FF"] _hideLabel=true 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--hide-label kol-input-color">
      <label class="kol-form-field__label" hidden="" htmlfor="input-color-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-label="Label" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" list="input-color-list-nonce" name="field-color" type="color" value="#FFFFFF">
            <datalist id="input-color-list-nonce">
              <option value="#FF0000"></option>
              <option value="#00FF00"></option>
              <option value="#0000FF"></option>
            </datalist>
          </div>
        </div>
        <div class="kol-form-field__tooltip">
          <div class="kol-tooltip__floating">
            <div class="kol-tooltip__arrow"></div>
            <span class="kol-span kol-tooltip__content" id="input-color-label-nonce">
              <span class="kol-span__container">
                <span class="kol-span__label">
                  Label
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _suggestions=["#FF0000","#00FF00","#0000FF"] _hint="Hint" 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-describedby="input-color-hint-nonce" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" list="input-color-list-nonce" name="field-color" type="color" value="#FFFFFF">
            <datalist id="input-color-list-nonce">
              <option value="#FF0000"></option>
              <option value="#00FF00"></option>
              <option value="#0000FF"></option>
            </datalist>
          </div>
        </div>
      </div>
      <span class="kol-form-field__hint" id="input-color-hint-nonce">
        Hint
      </span>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _suggestions=["#FF0000","#00FF00","#0000FF"] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" list="input-color-list-nonce" name="field-color" type="color" value="#FFFFFF">
            <datalist id="input-color-list-nonce">
              <option value="#FF0000"></option>
              <option value="#00FF00"></option>
              <option value="#0000FF"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _suggestions=["#FF0000","#00FF00","#0000FF"] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" list="input-color-list-nonce" name="field-color" type="color" value="#FFFFFF">
            <datalist id="input-color-list-nonce">
              <option value="#FF0000"></option>
              <option value="#00FF00"></option>
              <option value="#0000FF"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end"></div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _suggestions=["#FF0000","#00FF00","#0000FF"] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" list="input-color-list-nonce" name="field-color" type="color" value="#FFFFFF">
            <datalist id="input-color-list-nonce">
              <option value="#FF0000"></option>
              <option value="#00FF00"></option>
              <option value="#0000FF"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _suggestions=["#FF0000","#00FF00","#0000FF"] _infoPopover={"_label":"Info","_content":"Ich bin ein Hinweis.","_icons":"kolicon-alert-info"} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
        <kol-popover-button-wc _content="Ich bin ein Hinweis." _hidelabel="" _icons="kolicon-alert-info" _inline="" _label="Info" _variant="ghost">
          <div class="kol-popover-button__popover--styled">
            Ich bin ein Hinweis.
          </div>
        </kol-popover-button-wc>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" list="input-color-list-nonce" name="field-color" type="color" value="#FFFFFF">
            <datalist id="input-color-list-nonce">
              <option value="#FF0000"></option>
              <option value="#00FF00"></option>
              <option value="#0000FF"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _suggestions=["#FF0000","#00FF00","#0000FF"] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true _touched=true 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _touched="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--error kol-form-field--hidden-msg kol-form-field--msg-type-error kol-form-field--touched kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input aria-invalid="true" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched kol-input-color__input kol-input-color__input--color" id="input-color-nonce" list="input-color-list-nonce" name="field-color" type="color" value="#FFFFFF">
            <datalist id="input-color-list-nonce">
              <option value="#FF0000"></option>
              <option value="#00FF00"></option>
              <option value="#0000FF"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _suggestions=["#FF0000","#00FF00","#0000FF"] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _touched=true 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _touched="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--error kol-form-field--msg-type-error kol-form-field--touched kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input aria-describedby="input-color-msg-nonce" aria-invalid="true" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched kol-input-color__input kol-input-color__input--color" id="input-color-nonce" list="input-color-list-nonce" name="field-color" type="color" value="#FFFFFF">
            <datalist id="input-color-list-nonce">
              <option value="#FF0000"></option>
              <option value="#00FF00"></option>
              <option value="#0000FF"></option>
            </datalist>
          </div>
        </div>
      </div>
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg kol-form-field__msg" id="input-color-msg-nonce" role="alert">
        <span class="visually-hidden">
          kol-error
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
        <div class="kol-alert__content">
          Es ist ein Fehler aufgetreten
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _suggestions=["#FF0000","#00FF00","#0000FF"] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-describedby="input-color-msg-nonce" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" list="input-color-list-nonce" name="field-color" type="color" value="#FFFFFF">
            <datalist id="input-color-list-nonce">
              <option value="#FF0000"></option>
              <option value="#00FF00"></option>
              <option value="#0000FF"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _suggestions=["#FF0000","#00FF00","#0000FF"] _readOnly=true 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _readonly="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" list="input-color-list-nonce" name="field-color" type="color" value="#FFFFFF">
            <datalist id="input-color-list-nonce">
              <option value="#FF0000"></option>
              <option value="#00FF00"></option>
              <option value="#0000FF"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _suggestions=["#FF0000","#00FF00","#0000FF"] _shortKey="S" 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              S
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-keyshortcuts="S" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" list="input-color-list-nonce" name="field-color" type="color" value="#FFFFFF">
            <datalist id="input-color-list-nonce">
              <option value="#FF0000"></option>
              <option value="#00FF00"></option>
              <option value="#0000FF"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _suggestions=["#FF0000","#00FF00","#0000FF"] _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" list="input-color-list-nonce" name="field-color" type="color" value="#FFFFFF">
            <datalist id="input-color-list-nonce">
              <option value="#FF0000"></option>
              <option value="#00FF00"></option>
              <option value="#0000FF"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-button-wc _hidelabel="" _label="einblenden" class="kol-input-container__smart-button"></kol-button-wc>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _suggestions=["#FF0000","#00FF00","#0000FF"] _touched=true 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _touched="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--touched kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--touched kol-input-color__input kol-input-color__input--color" id="input-color-nonce" list="input-color-list-nonce" name="field-color" type="color" value="#FFFFFF">
            <datalist id="input-color-list-nonce">
              <option value="#FF0000"></option>
              <option value="#00FF00"></option>
              <option value="#0000FF"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _suggestions=["#FF0000","#00FF00","#0000FF"] _variant="custom" 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--custom kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" list="input-color-list-nonce" name="field-color" type="color" value="#FFFFFF">
            <datalist id="input-color-list-nonce">
              <option value="#FF0000"></option>
              <option value="#00FF00"></option>
              <option value="#0000FF"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _suggestions=["#FF0000","#00FF00","#0000FF"] 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" list="input-color-list-nonce" name="field-color" type="color" value="#FFFFFF">
            <datalist id="input-color-list-nonce">
              <option value="#FF0000"></option>
              <option value="#00FF00"></option>
              <option value="#0000FF"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _touched=true 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext" _touched="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--touched kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--touched kol-input-color__input kol-input-color__input--color" id="input-color-nonce" name="field-color" type="color" value="#FFFFFF">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" _variant="custom" 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--custom kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" name="field-color" type="color" value="#FFFFFF">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;

exports[`kol-input-color should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="#FFFFFF" 1`] = `
<kol-input-color _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-input-color">
      <label class="kol-form-field__label" htmlfor="input-color-nonce" id="input-color-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input-color__input kol-input-color__input--color" id="input-color-nonce" name="field-color" type="color" value="#FFFFFF">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-color>
`;
